tests/unit/default/syntax-error/168-alter-table-dot-name-type-default.e.t
---- IN ----
*%table.name:int=42
---- OUT ----
---- ERR ----
syntax: expected `=>` after `*%table.name:int=42` instead of EOL at position 19 - at line 1
---- EXIT ----
1
